--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,10 @@ site_name: Mir-Us
 extra_css:
   - stylesheets/extra.css
 
+extra_javascript:
+  - https://cdnjs.cloudflare.com/ajax/libs/tablesort/5.2.1/tablesort.min.js
+  - javascripts/tables.js
+
 theme:
   name: "material"
   features:
