Added provisional README for testing, added header in the docs. Version is ready for testing.
Signed-off-by: phenolophthaleinum <mccv99@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,9 +8,11 @@ extra_javascript:
   - javascripts/tables.js
 
 theme:
-  name: "material"
+  name: material
+  custom_dir: 'overrides/'
   features:
     - navigation.top
+    - header.autohide
   palette:
     - scheme: default
       primary: cyan
